--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "framer-motion": "^10.16.5",
     "lodash": "^4.17.21",
     "next": "^14.0.2",
     "react": "^18.2.0",
@@ -27,7 +28,10 @@
     "eslint-config-custom": "workspace:*",
     "prettier-config": "workspace:*",
     "tsconfig": "workspace:*",
-    "typescript": "^5.2.2",
-    "types": "workspace:*"
+    "types": "workspace:*",
+    "typescript": "^5.2.2"
+  },
+  "engines": {
+    "node": "18"
   }
 }
