--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -7,5 +7,9 @@
     "dist",
     "build",
     "node_modules"
-  ]
+  ],
+  "compileOnSave": true,
+  "compilerOptions": {
+    "rootDir": "."
+  }
 }
