--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,12 @@
 {
-  "extends": "tsconfig/base.json"
+  "extends": "tsconfig/base.json",
+  "exclude": [
+    "node_modules"
+  ],
+  "files": [
+    "index.ts"
+  ],
+  "compilerOptions": {
+    "rootDir": "."
+  },
 }
